# videofinder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.gradle  build.rs
.cargo/: config.toml
app/: build.gradle
app/src/main/: AndroidManifest.xml
scripts/: scan_hdd.py
src/: download.rs  enums.rs  image_handling.rs  lib.rs  main.rs  merge.rs  simple_log.rs  sqlsearch.rs
ui/: app-window.slint  details-window.slint  large-icon-button.slint  record-wrapper.slint
