[package]
name = "videofinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
slint = { version = "1.8", features = ["backend-android-activity-06"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[build-dependencies]
slint-build = "1.8.0"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
android-build = { path = "../local-crates/android-build" }
