[package]
name = "videofinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
slint = { version = "1.12", features = ["backend-android-activity-06"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
hyper-rustls = "0.24"  # Matches Hyper 1.1; 0.26 is for Hyper 1.3
tokio = { version = "1.46.1", features = ["full"] }
http-body-util = "0.1.3"

flexi_logger = "0.31.2"
log = "0.4.27"
async-compat = "0.2.4"

[build-dependencies]
slint-build = "1.12.0"

[lib]
# https://github.com/rust-lang/cargo/issues/12260#issuecomment-2225216175 says this might create trouble on Windows...
# cdylib = Build as a C-compatible dynamic library for Android
# rlib = Build a Rust library for the desktop build
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "videofinder"
path = "src/bin/main.rs"
# This allows to skip building the binary on Android (it builds, but it's useless and very slow to build)
required-features = ["with-binary"]

[features]
default = ["with-binary"]
with-binary = []

# https://gendignoux.com/blog/2022/10/24/rust-library-android.html
[profile.release]
strip = true


#[patch.crates-io]
#android-build = { path = "../local-crates/android-build" }
