[package]
name = "videofinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
slint = { version = "1.12", features = ["backend-android-activity-06"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
flexi_logger = "0.31.2"
log = "0.4.27"
async-compat = "0.2.4"
anyhow = "1.0.98"
bytes = "1.10.1"
futures-util = "0.3.31"

[build-dependencies]
slint-build = "1.12.0"

[lib]
# https://github.com/rust-lang/cargo/issues/12260#issuecomment-2225216175 says this might create trouble on Windows...
# cdylib = Build as a C-compatible dynamic library for Android
# rlib = Build a Rust library for the desktop build
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "videofinder"
path = "src/bin/main.rs"
# This allows to skip building the binary on Android (it builds, but it's useless and very slow to build)
required-features = ["with-binary"]

[features]
default = ["with-binary"]
with-binary = []

# https://gendignoux.com/blog/2022/10/24/rust-library-android.html
[profile.release]
strip = true


#[patch.crates-io]
#android-build = { path = "../local-crates/android-build" }
